# Chainage-avant

./: CMakeLists.txt  README.rst
cmake/: FindClangFormat.cmake
docs/: conf.py  index.rst  requirements.txt  rules.rst
src/: CMakeLists.txt  Doxyfile
src/rules/: CMakeLists.txt  RulesConfig.cmake.in  app.c  rules.c  rules.h  rules.inc  rules.pc.in  rules.txt  rules_BACKUP_30283.c  rules_BASE_30283.c  rules_LOCAL_30283.c  rules_REMOTE_30283.c
test/rules/: CMakeLists.txt  test-create-destroy-rule.c  test-create-destroy.c  test-fwrite-final.c  test-init-finish-facts.c  test-init-finish-rules.c  test-initialize-c-facts.c  test-isSubset.c  test-string-to-table.c  test-update-c-fact.c  test-update-rule.c
